2015-04-25  Daniel Starke  <daniel.f.starke@freenet.de>

PR target/65867
	* ssp.c: Added wincrypt.h include for Windows targets.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233253 138bc75d-0d04-0410-961f-82ee72b054a4